[package]
name = "hammer_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
legion="=0.4.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["unsafe_textures"]